# bachelor-thesis

./: README.md  dbscript.sql  installation.txt
backend/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json
backend/auth/: auth.js
backend/database/: config.json  database.js  queries.js
backend/database/model/: exercise.js  result.js  test.js  user.js
backend/docker/: 1_characterType.cpp  CMakeLists.txt  Dockerfile  fail.txt  solution2.h  testyUloha_1.cpp
backend/docker/cmakes/: 11.txt  20.txt
backend/docker/depends/: code.cpp  tests.cpp
backend/docker/depends/CMakeLists/11/: CMakeLists.txt
backend/docker/depends/CMakeLists/17/: CMakeLists.txt
backend/docker/depends/CMakeLists/98/: CMakeLists.txt
backend/docker/depends/container/: Dockerfile
backend/docker/depends/container/GoogleTest/: gtest-printers.cc
backend/docker/workers/worker0/: CMakeLists.txt  code.cpp  result.txt  t.txt  tests.cpp
backend/docker/workers/worker1/: CMakeLists.txt  code.cpp  result.txt  t.txt  tests.cpp
backend/dockers/11641594678415/: Dockerfile  header.h
backend/dockers/11641594778763/: res.txt  tests.cpp
backend/dockers/cmakes/: 14.txt  17.txt
backend/helpers/: copyPathRec.js  fileSystem.js  generatePassword.js  passedResult.js  removeFirstLine.js  runTests.js  validOutputFile.js  workers.js
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  consts.ts  index.tsx  testData.ts  types.ts
frontend/src/app/: store.ts
frontend/src/components/: Button.tsx  CodePaper.tsx  Dropdown.tsx  Editor.tsx  Link.tsx  (+13 more)
(+25 files in other folders)
